--- a/src/Götür Beni İstediğim Yere/GoturBeniIstedigimYere/App.Config
+++ b/src/Götür Beni İstediğim Yere/GoturBeniIstedigimYere/App.Config
@@ -5,12 +5,12 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <appSettings>
-    <add key="consumerKey" value="sBhB0IH7rxKgvrf2BiGfav89A" />
-    <add key="consumerSecret" value="hfGaOxPGY0n5GJfnUApf25fXKAOj4I3aFPcgp8UQ2Cm4mK8xIw" />
-    <add key="accessToken" value="421969895-gZfv15OkV7baxlCIzhE6K6OfkodUa6QlsGdE0N8w" />
-    <add key="accessTokenSecret" value="U9OXlAadUohAxcHAKXMc1V38AFv7VelwEIcaPvGy9Mzxq" />
-    <add key="4SquareClientID" value="ATJZHIJQPMOMGEQNXVGTB53H1TOOGVKFK04TZFMY3YKRIJ4T" />
-    <add key="4SquareClientSecret" value="G5X1EETZT3RTKFTELVHYXHUSB4OBKVKM1YR1B3NQSWE0YGQE" />
+    <add key="consumerKey" value="" />
+    <add key="consumerSecret" value="" />
+    <add key="accessToken" value="" />
+    <add key="accessTokenSecret" value="" />
+    <add key="4SquareClientID" value="" />
+    <add key="4SquareClientSecret" value="" />
   </appSettings>
   <connectionStrings>
     <add name="CheckinDatasetEntities" connectionString="metadata=res://*/EntityFramework.CheckinEF.csdl|res://*/EntityFramework.CheckinEF.ssdl|res://*/EntityFramework.CheckinEF.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-E814DM0\SQLEXPRESS;initial catalog=CheckinDataset;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
